# bullet

./: Cargo.toml
crates/bullet_cuda_backend/: Cargo.toml
crates/bullet_cuda_backend/src/: device.rs  kernel.rs
crates/bullet_lib/: Cargo.toml
crates/trainer/: Cargo.toml
crates/utils/: Cargo.toml
examples/: input-buckets.rs  moarlayers.rs
