[package]
name = "bullet_lib"
version = "1.0.0"
description = "Neural Network Trainer"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[features]
default = ["cuda"]
cpu = []
cuda = ["bullet_cuda_backend"]
hip = ["bullet_hip_backend", "bullet_hip_backend/hip", "bullet_cuda_backend?/error"]
hip-cuda = ["bullet_hip_backend"]
multigpu = ["bullet_cuda_backend/nccl"]

[dependencies]
acyclib = { workspace = true }
bullet_cuda_backend = { workspace = true, optional = true }
bullet_hip_backend = { workspace = true, optional = true }
bulletformat = { workspace = true }
montyformat = { workspace = true }
rand = "0.9.0"
sfbinpack = "0.6.0"
viriformat = { workspace = true }

[[example]]
name = "input-buckets"
path = "../../examples/input-buckets.rs"
