[package]
name = "bullet_lib"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
description = "Neural Network Trainer"

[dependencies]
bullet-compiler = { workspace = true }
bullet-gpu = { workspace = true }
bullet-trainer = { workspace = true }
bulletformat = "1.8.0"
montyformat = "0.10.0"
rand = "0.9.0"
sfbinpack = "0.6.0"
viriformat = "3.0.0"

[features]
cuda = ["bullet-gpu/cuda", "bullet-trainer/cuda"]
rocm = ["bullet-gpu/rocm", "bullet-trainer/rocm"]

[[example]]
name = "moarlayers"
path = "../../examples/moarlayers.rs"
