[package]
name = "bullet-utils"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.0"
bulletformat = "1.8.0"
montyformat = "0.10.0"
structopt = "0.3.0"
viriformat = "3.0.0"
